--- a/static/search.css
+++ b/static/search.css
@@ -1,10 +1,13 @@
 .search-content {
-    min-height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2em;
+    padding: 2em 0;
+    min-height: auto;
 }
+
 .search-content h1 {
     color: white;
     font-size: 3em;
@@ -19,7 +22,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 1em;
+    gap: 1em;
 }
 .book-card {
     padding: 0.8em;
@@ -40,16 +43,3 @@
     gap: 0.8em;
 }
 
-.book-card button{
-    display: inline-block;
-    padding: 0.5em 1em;
-    border: 2px solid blue;
-    border-radius: 1em;
-    background: #37b8ee;
-    color: #7af6e2;
-    cursor: pointer;
-
-    &:hover {
-        background: #0015ff;
-    }
-}
