--- a/static/rent.css
+++ b/static/rent.css
@@ -1,25 +1,8 @@
-.box-for-renting {
-    padding: 0.8em 2em;
-    margin: 1em auto;
-    width: 90%;
-    max-width: 300px;
-    list-style: none;
-    border: 5px solid #37b8ee;
-    border-radius: 12px;
-    color: white;
-    background-color: rgba(144, 218, 250, 0.69);
-    box-shadow: 0 0 10px rgb(242, 230, 230);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    gap: 0.8em;
-}
-.box-for-renting h2:hover{
+
+.box-details h2:hover{
     color: blue;
 }
-.box-for-renting h3{
+.box-details h3{
     color: darkred;
 }
 
