--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
         <nav>
             <ul>
-                <li><a href="">My library</a></li> {# list of all the books #}
+                <li><a href="{% url 'all_books' %}">My library</a></li> {# list of all the books #}
                 <li><a href="#">Potions</a></li> {# making magic potions #}
                 <li><a href="#">Match a Dragon</a></li> {# random matchmaking #}
                 <li><a href="#">Read</a></li> {# blog #}
