--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="{% url 'all_books' %}">My library</a></li> {# list of all the books #}
                 <li><a href="#">Potions</a></li> {# making magic potions #}
-                <li><a href="#">Match a Dragon</a></li> {# random matchmaking #}
+                <li><a href="{% url 'display-dragons' %}">Match a Dragon</a></li> {# random matchmaking #}
                 <li><a href="#">Read</a></li> {# blog #}
             </ul>
         </nav>
