--- a/static/home.css
+++ b/static/home.css
@@ -1,10 +1,13 @@
 .library-header {
     width: 100%;
     text-align: center;
-    padding: 2em 0;
+    padding: 2em;
+    position: relative;
+
 }
 
-.library-header h1 {
+.library-header h1,
+.library-header h2{
     color: #d4af37;
     font-size: 3em;
     margin: 0;
@@ -16,6 +19,10 @@
     animation: flicker 3s ease-in-out infinite;
 }
 
+.library-header h2 {
+    margin-top: 1em;
+}
+
 .library-header h1:hover{
     color: #ffd700;
     text-shadow: 
@@ -24,20 +31,6 @@
         0 0 50px rgba(212, 175, 55, 0.5);
 }
 
-@keyframes flicker {
-    0%, 100% { 
-        opacity: 1;
-        text-shadow: 
-            2px 2px 4px rgba(0, 0, 0, 0.8),
-            0 0 20px rgba(212, 175, 55, 0.5);
-    }
-    50% { 
-        opacity: 0.95;
-        text-shadow: 
-            2px 2px 4px rgba(0, 0, 0, 0.8),
-            0 0 25px rgba(212, 175, 55, 0.7);
-    }
-}
 
 .search-bar{
     display: flex;
@@ -53,7 +46,7 @@
     font-size: 1em;
     border-radius: 2em;
     border: 3px solid #8b6914;
-    color: #f4e4c1;
+    color: #604400;
     background: linear-gradient(135deg, 
         rgba(26, 24, 44, 0.85), 
         rgba(45, 35, 66, 0.85));
@@ -84,4 +77,12 @@
     font-style: italic;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     text-align: center;
+}
+
+
+.results-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
 }
