--- a/static/base.css
+++ b/static/base.css
@@ -124,7 +124,7 @@ button{
     display: inline-block;
     padding: 0.8em 1.8em;
     border: 2px solid #d4af37;
-    border-radius: 4px;
+    border-radius: 2em;
     background: linear-gradient(135deg,
         rgba(139, 105, 20, 0.7),
         rgba(184, 134, 11, 0.7));
