--- a/templates/users/register-page.html
+++ b/templates/users/register-page.html
@@ -16,25 +16,12 @@
 
     <div class="box-details form-box">
         <h1>I need your details for your soul if you don't return the book</h1>
-        <form method="post">
+        <form method="post" action="{% url 'register' book.id %}">
             {% csrf_token %}
-            <input type="text" id="first_name" name="first_name" placeholder="Enter your first name" required>
-
-
-            <input type="text" id="last_name" name="last_name" placeholder="Enter your last name" required>
-
-
-            <input type="text" id="phone" name="phone" placeholder="Enter your phone number" required>
-
-
-            <input type="email" id="email" name="email" placeholder="Enter your email" required>
-
-
+            {{ form }}
+            <button type="submit">Rent</button>
         </form>
-        <button type="submit">Rent</button>
+
         </div>
-
-
-
 </main>
 {% endblock %}
