--- a/static/register-page.css
+++ b/static/register-page.css
@@ -48,14 +48,19 @@
     justify-content: center;
 }
 
-.form-box form p {
+/* Target both p and div (Django uses both) */
+.form-box form p,
+.form-box form div {
     flex: 1 1 calc(50% - 0.6em);
     min-width: 200px;
-    margin: 0;
+    margin: 0 0 1em 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-box form label {
     display: none;
+    order: 1;
 }
 
 .form-box form input {
@@ -66,12 +71,30 @@
     border: 2px solid rgba(34, 38, 108, 0.38);
     text-align: center;
     box-sizing: border-box;
+    order: 2;  /* Input comes FIRST visually */
+}
+
+/* Remove bullets and position error AFTER input */
+.form-box form ul.errorlist {
+    list-style: none;
+    padding: 0;
+
+    order: 3;  /* Error comes AFTER input */
+}
+
+/* Style the error text */
+.form-box form .errorlist li {
+    color: #ff4444;
+    font-size: 0.85em;
+    font-weight: 600;
+    padding: 0.2em 0;
+    margin: 0;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 }
 
 .form-box button {
-   width: 150px; /* Fixed smaller width */
+    width: 150px;
     padding: 0.5em;
-    font-size: 0.9em; /* Slightly smaller text */
-    margin: 2em auto 0 auto;
+    font-size: 0.9em;
     display: block;
 }
