--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <title>Catalog</title>
     <link rel="stylesheet" href="{% static 'base.css' %}">
+    <link rel="stylesheet" href="{% static 'pagination.css' %}">
     {% block css %}{% endblock %}
+
 </head>
 <body>
     <header class="section site-header">
