--- a/templates/catalog/home.html
+++ b/templates/catalog/home.html
@@ -28,6 +28,23 @@
 
             {% endfor %}
         </div>
+        {% if page_obj.has_other_pages %}
+            <div class="pagination">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1{% if searched_book %}&book_name={{ searched_book }}{% endif %}" class="page-link">« First</a>
+                    <a href="?page={{ page_obj.previous_page_number }}{% if searched_book %}&book_name={{ searched_book }}{% endif %}" class="page-link">‹ Previous</a>
+                {% endif %}
+
+                <span class="page-current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}{% if searched_book %}&book_name={{ searched_book }}{% endif %}" class="page-link">Next ›</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}{% if searched_book %}&book_name={{ searched_book }}{% endif %}" class="page-link">Last »</a>
+                {% endif %}
+            </div>
+        {% endif %}
     {% endif %}
 
 </main>
