--- a/templates/users/register-page.html
+++ b/templates/users/register-page.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block css %}<link rel="stylesheet" href="{% static 'register-page.css' %}">{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'register-page.css' %}">
+{% endblock %}
 
 
 {% block content %}
@@ -24,4 +25,5 @@
 
         </div>
 </main>
+
 {% endblock %}
