--- a/static/register-page.css
+++ b/static/register-page.css
@@ -1,100 +1,23 @@
 .register-book {
     display: flex;
-    flex-direction: row;
-    gap: 5em;
+    gap: 4em;
     justify-content: center;
+    align-items: flex-start;
     flex-wrap: wrap;
+    padding: 2em;
 }
 
 .book-box {
     flex: 0 1 300px;
-    min-width: 300px;
+    min-width: 280px;
     width: 95%;
-    max-width: 600px;
+    max-width: 500px;
     padding: 2em;
 }
 
-.book-box:hover{
-    color: midnightblue;
+.book-box:hover {
+    color: #49d3ba;
 }
-
-.book-box p{
-    font-size: 1.5em;
-}
-
-.form-box {
-    flex: 1 1 300px;
-    min-width: 300px;
-    width: 95%;
-    max-width: 600px;
-    padding: 2em;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-}
-
-.form-box h1 {
-    font-size: 1.5em;
-    line-height: 1.3;
-    text-align: center;
-    word-wrap: break-word;
-    margin: 0 0 1em 0;
-}
-
-.form-box form {
-    display: flex;
-    gap: 1.2em;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-/* Target both p and div (Django uses both) */
-.form-box form p,
-.form-box form div {
-    flex: 1 1 calc(50% - 0.6em);
-    min-width: 200px;
-    margin: 0 0 1em 0;
-    display: flex;
-    flex-direction: column;
-}
-
-.form-box form label {
-    display: none;
-    order: 1;
-}
-
-.form-box form input {
-    width: 100%;
-    padding: 0.5em;
-    font-size: 1em;
-    border-radius: 1em;
-    border: 2px solid rgba(34, 38, 108, 0.38);
-    text-align: center;
-    box-sizing: border-box;
-    order: 2;  /* Input comes FIRST visually */
-}
-
-/* Remove bullets and position error AFTER input */
-.form-box form ul.errorlist {
-    list-style: none;
-    padding: 0;
-
-    order: 3;  /* Error comes AFTER input */
-}
-
-/* Style the error text */
-.form-box form .errorlist li {
-    color: #ff4444;
-    font-size: 0.85em;
-    font-weight: 600;
-    padding: 0.2em 0;
-    margin: 0;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-}
-
-.form-box button {
-    width: 150px;
-    padding: 0.5em;
-    font-size: 0.9em;
-    display: block;
+.book-box:hover h1{
+    color: rgba(253, 2, 49, 0.86);
 }
