--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>Catalog</title>
     <link rel="stylesheet" href="{% static 'base.css' %}">
     <link rel="stylesheet" href="{% static 'pagination.css' %}">
+    <link rel="stylesheet" href="{% static 'forms.css' %}">
     {% block css %}{% endblock %}
 
 </head>
@@ -30,7 +31,13 @@
       {% endblock %}
   </div>
 
-
+    <footer class="magic-footer">
+        <p>📚 Magic Library &copy; 2026</p>
+        <p>Crafted with ✨ spells & ☕ by Viktoria</p>
+        <div class="footer-links">
+            <a href="{% url 'home' %}">Home</a> |
+        </div>
+    </footer>
 
 </body>
 </html>
