--- a/templates/circulation/rent.html
+++ b/templates/circulation/rent.html
@@ -4,8 +4,9 @@
 
 
 {% block content %}
+    <h1>So you want to rent my magic book</h1>
 <main class = "box-details">
-    <h1>So you want to rent my magic book:</h1>
+
     <h2>{{ book.title }}</h2>
     <div class="rules">
         <h3>Here are my rules:</h3>
