--- a/templates/circulation/rent.html
+++ b/templates/circulation/rent.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block css %}<link rel="stylesheet" href="{% static 'rent.css' %}">{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'circulation/rent.css' %}">{% endblock %}
 
 
 {% block content %}
