--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="{% url 'all_books' %}">My Magic library</a></li> {# list of all the books #}
-                <li><a href="#">Magic Potions</a></li> {# making magic potions #}
+                <li><a href="{% url 'create_potion' %}">Magic Potions</a></li> {# making magic potions #}
                 <li><a href="{% url 'display-dragons' %}">Match a Dragon</a></li> {# random matchmaking #}
                 <li><a href="{% url 'grimoire_list' %}">Grimoire</a></li> {# blog #}
             </ul>
