--- a/templates/catalog/all_books.html
+++ b/templates/catalog/all_books.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block css %}<link rel="stylesheet" href="{% static 'table.css' %}">
+{% block css %}<link rel="stylesheet" href="{% static 'catalog/table.css' %}">
 {% endblock %}
 
 {% block content %}
