--- a/templates/dragons/display-random-page.html
+++ b/templates/dragons/display-random-page.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block css %}<link rel="stylesheet" href="{% static 'random.css' %}">{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'dragons/random.css' %}">{% endblock %}
 
 {% block content %}
 <main class = 'order'>
