--- a/templates/users/register-page.html
+++ b/templates/users/register-page.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block css %}<link rel="stylesheet" href="{% static 'register-page.css' %}">
+{% block css %}<link rel="stylesheet" href="{% static 'users/register-page.css' %}">
 {% endblock %}
 
 
