--- a/templates/catalog/all_books.html
+++ b/templates/catalog/all_books.html
@@ -48,22 +48,6 @@
             </tbody>
         </table>
 
-    {% if page_obj.has_other_pages %}
-            <div class="pagination">
-                {% if page_obj.has_previous %}
-                    <a href="?page=1{% if form.genre.value %}&genre={{ form.genre.value }}{% endif %}" class="page-link">« First</a>
-                    <a href="?page={{ page_obj.previous_page_number }}{% if form.genre.value %}&genre={{ form.genre.value }}{% endif %}" class="page-link">‹ Previous</a>
-                {% endif %}
-
-                <span class="page-current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                </span>
-
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}{% if form.genre.value %}&genre={{ form.genre.value }}{% endif %}" class="page-link">Next ›</a>
-                    <a href="?page={{ page_obj.paginator.num_pages }}{% if form.genre.value %}&genre={{ form.genre.value }}{% endif %}" class="page-link">Last »</a>
-                {% endif %}
-            </div>
-        {% endif %}
+    {% include 'pagination.html' %}
     </div>
 {% endblock %}
