--- a/templates/dragons/display-page.html
+++ b/templates/dragons/display-page.html
@@ -18,21 +18,6 @@
 
     {% endfor %}
 </main>
-    {% if page_obj.has_other_pages %}
-    <div class="pagination">
-        {% if page_obj.has_previous %}
-            <a href="?page=1" class="page-link">« First</a>
-            <a href="?page={{ page_obj.previous_page_number }}" class="page-link">‹ Previous</a>
-        {% endif %}
+    {% include 'pagination.html' %}
 
-        <span class="page-current">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-        </span>
-
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}" class="page-link">Next ›</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link">Last »</a>
-        {% endif %}
-    </div>
-{% endif %}
 {% endblock %}
