add user login new logic

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
                 <li><a href="{% url 'create_potion' %}">Magic Potions</a></li> {# making magic potions #}
                 <li><a href="{% url 'display-dragons' %}">Match a Dragon</a></li> {# random matchmaking #}
                 <li><a href="{% url 'grimoire_list' %}">Grimoire</a></li> {# blog #}
+                <li><a href="{% url 'create_user' %}">Create Wizard</a></li>
             </ul>
         </nav>
     </header>
