--- a/templates/circulation/rent.html
+++ b/templates/circulation/rent.html
@@ -18,7 +18,7 @@
             <li>5. Late returns will be punished by mysterious frog rain.</li>
         </ul>
 
-        <form action="{% url 'register' book.id %}" method="get">
+        <form action="{% url 'rent_a_book' book.id %}" method="get">
             <button type="submit">I accept!</button>
         </form>
 
