--- a/templates/grimoire/grimoire_form.html
+++ b/templates/grimoire/grimoire_form.html
@@ -10,4 +10,5 @@
             <button type="submit">Submit Grimoire</button>
           </form>
     </main>
+    {% include 'if_missing_username.html' %}
 {% endblock %}
