--- a/templates/catalog/home.html
+++ b/templates/catalog/home.html
@@ -51,7 +51,7 @@
                     <h3>{{ book.title }}</h3>
                     <p>Author: {{ book.writer }}</p>
                     {% if book.quantity > 0 %}
-                        <a href="{% url 'rent_a_book' book.id %}">
+                        <a href="{% url 'validate_rent_a_book' book.id %}">
                             <button type="button">Rent</button>
                         </a>
                      {% else %}
